switched out put from csv to json and created json file

--- a/map-data.ipynb
+++ b/map-data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +204,7 @@
        "[142 rows x 6 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +356,7 @@
        "4          1H  8.562167         85  258612110  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +472,7 @@
        "4  {'name': 'Spain', 'id': '724', 'alpha3code': '...  club  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -761,7 +761,7 @@
        "[101759 rows x 12 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -774,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -941,7 +941,7 @@
        "4  I. Konat\\u00e9                  null  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -952,150 +952,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>firstName</th>\n",
-       "      <th>lastName</th>\n",
-       "      <th>name</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>wyId</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>32777</th>\n",
-       "      <td>Harun</td>\n",
-       "      <td>Tekin</td>\n",
-       "      <td>Harun Tekin</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>393228</th>\n",
-       "      <td>Malang</td>\n",
-       "      <td>Sarr</td>\n",
-       "      <td>Malang Sarr</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>393230</th>\n",
-       "      <td>Over</td>\n",
-       "      <td>Mandanda</td>\n",
-       "      <td>Over Mandanda</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>32793</th>\n",
-       "      <td>Alfred John Momar</td>\n",
-       "      <td>N'Diaye</td>\n",
-       "      <td>Alfred John Momar N'Diaye</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>393247</th>\n",
-       "      <td>Ibrahima</td>\n",
-       "      <td>Konat\\u00e9</td>\n",
-       "      <td>Ibrahima Konat\\u00e9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>120839</th>\n",
-       "      <td>Ali</td>\n",
-       "      <td>Ma\\u00e2loul</td>\n",
-       "      <td>Ali Ma\\u00e2loul</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>114736</th>\n",
-       "      <td>Carlos Alberto</td>\n",
-       "      <td>C\\u00e1ceda Oyaguez</td>\n",
-       "      <td>Carlos Alberto C\\u00e1ceda Oyaguez</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>114908</th>\n",
-       "      <td>Miguel Gianpierre</td>\n",
-       "      <td>Araujo Blanco</td>\n",
-       "      <td>Miguel Gianpierre Araujo Blanco</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>285583</th>\n",
-       "      <td>Ahmed Reda</td>\n",
-       "      <td>Tagnaouti</td>\n",
-       "      <td>Ahmed Reda Tagnaouti</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>361536</th>\n",
-       "      <td>Ricardo</td>\n",
-       "      <td>Guardia Avila</td>\n",
-       "      <td>Ricardo Guardia Avila</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>3603 rows × 3 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                firstName             lastName  \\\n",
-       "wyId                                             \n",
-       "32777               Harun                Tekin   \n",
-       "393228             Malang                 Sarr   \n",
-       "393230               Over             Mandanda   \n",
-       "32793   Alfred John Momar              N'Diaye   \n",
-       "393247           Ibrahima          Konat\\u00e9   \n",
-       "...                   ...                  ...   \n",
-       "120839                Ali         Ma\\u00e2loul   \n",
-       "114736     Carlos Alberto  C\\u00e1ceda Oyaguez   \n",
-       "114908  Miguel Gianpierre        Araujo Blanco   \n",
-       "285583         Ahmed Reda            Tagnaouti   \n",
-       "361536            Ricardo        Guardia Avila   \n",
-       "\n",
-       "                                      name  \n",
-       "wyId                                        \n",
-       "32777                          Harun Tekin  \n",
-       "393228                         Malang Sarr  \n",
-       "393230                       Over Mandanda  \n",
-       "32793            Alfred John Momar N'Diaye  \n",
-       "393247                Ibrahima Konat\\u00e9  \n",
-       "...                                    ...  \n",
-       "120839                    Ali Ma\\u00e2loul  \n",
-       "114736  Carlos Alberto C\\u00e1ceda Oyaguez  \n",
-       "114908     Miguel Gianpierre Araujo Blanco  \n",
-       "285583                Ahmed Reda Tagnaouti  \n",
-       "361536               Ricardo Guardia Avila  \n",
-       "\n",
-       "[3603 rows x 3 columns]"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "players_map = players.set_index('wyId')[['firstName', 'lastName']]\n",
     "players_map['name'] = players_map['firstName'] + ' ' + players_map['lastName']\n",
@@ -1105,7 +964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1246,7 +1105,7 @@
        "4  2057954      Pass  Saudi Arabia          1H  8.562167         85  258612110  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1257,7 +1116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1268,7 +1127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1416,7 +1275,7 @@
        "4         85  258612110  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1427,7 +1286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1440,7 +1299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1588,7 +1447,7 @@
        "4  Simple pass  258612110  "
       ]
      },
-     "execution_count": 56,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1599,7 +1458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1668,7 +1527,7 @@
        "Name: Description, dtype: object"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1681,7 +1540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1693,7 +1552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1834,7 +1693,7 @@
        "4      Pass  Saudi Arabia          1H  8.562167  Simple pass  258612110  "
       ]
      },
-     "execution_count": 63,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1845,11 +1704,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# events.to_csv('cleaned_events_world_cup2018.csv')"
+    "# events.to_json('cleaned_events_world_cup2018.json', orient='records')"
    ]
   },
   {
